--- a/src/Cooler/Cooler.css
+++ b/src/Cooler/Cooler.css
@@ -71,6 +71,7 @@
 }
 
 .section-title {
+    grid-gap: 0px !important;
     display: flex;
     align-items: center;
     color: var(--primary);
@@ -79,7 +80,7 @@
 }
 
 .section-icon {
-    margin-right: 10px;
+    margin-right: 5px;
     font-size: 1rem;
 }
 
