--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -393,3 +393,60 @@ hr {
     justify-content: center;
     font-size: 16px;
 }
+
+.swal2-close {
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to right, var(--primary), var(--secondary));
+    border: none;
+    border-radius: 100px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: var(--white) !important;
+    transition: var(--transition-fast);
+}
+
+.custom-modal-overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.custom-modal {
+    background: #fff;
+    padding: 0px;
+    border-radius: 10px;
+    width: 90%;
+    max-width: 700px;
+    max-height: 90vh;
+    overflow-y: auto;
+}
+
+.app-container {
+    max-width: 100%;
+    overflow-x: visible;
+    background-color: var(--light);
+    min-height: 100vh;
+    padding-bottom: 80px;
+    position: relative;
+    height: 100%;
+}
+
+
+/* @media (min-width: 768px) {
+    .app-container {
+        max-width: 500px;
+        margin: 0 auto;
+    }
+
+    .bottom-nav {
+        max-width: 500px;
+        margin: 0 auto;
+    }
+} */
