--- a/src/Cooler/Cooler.css
+++ b/src/Cooler/Cooler.css
@@ -437,7 +437,7 @@
     height: 80px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     background: #f5f5f5;
     border-radius: 4px;
 }
@@ -542,7 +542,7 @@
 }
 
 .new-template .spec-section {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 .new-template .section-title {
@@ -556,20 +556,17 @@
     text-decoration: underline;
     font-size: 16px;
     color: #444;
-    margin-bottom: 10px;
     border-bottom: 1px solid #eee;
-    padding-bottom: 5px;
 }
 
 .new-template .spec-table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .new-template .spec-table td {
-    padding: 6px 10px;
-    /* border-bottom: 1px solid #eee; */
+    padding: 2px 10px;
 }
 
 .new-template .spec-table td:first-child {
@@ -586,11 +583,11 @@
 }
 
 .new-template .notes-list li {
-    margin-bottom: 8px;
+    margin-bottom: 5px;
 }
 
 .new-template .template-footer {
-    margin-top: 40px;
+    margin-top: 15px;
     text-align: center;
     font-size: 12px;
     color: #666;
@@ -620,7 +617,7 @@
 
 .image-container {
     text-align: center;
-    max-width: 350px;
+    max-width: 400px;
     page-break-inside: avoid;
 }
 
